# gmail-attachment-backup

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
gmail_backup/: __init__.py  backup.py  config.py  gmail_client.py  local_client.py  s3_client.py  tracker.py
tests/: test_config.py  test_local_client.py  test_s3_client.py  test_tracker.py
